@@ -5,6 +5,9 @@
 - added: `RESTBuilder.patch([data])`
 - added: `CONVERT(obj, schema)` for quick converting values like Schema (more in docs.)
 - added: `Capitalize2` schema type which converts only the first char
+- added: `MailMessage.high()` sets `high` priority of the email messsage
+- added: `MailMessage.low()` sets `low` priority of the email messsage
+- added: `MailMessage.confidential()` sets `Sensitivity` header with `confidential` value
 
 - updated: `GROUP()` by adding a new argument `url_prefix`
 
